--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run echo "Hello again!"
-      - run sleep 15
+      - run: echo "Hello again!"
+      - run: sleep 15
 workflows:
   version: 2
   one_and_two:
